Fix member overflow

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -34,3 +34,6 @@ html,body
 
 .article-title
   line-height: 2
+
+.columns-wrap
+  flex-wrap: wrap
